--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -80,6 +80,18 @@
             <button type="submit" class="bg-logo-navy text-white px-6 py-2 rounded font-semibold ml-[25px] ">Continue</button>
         </div>
     </form>
+    <div class="flex items-center justify-center mt-8">
+        <p class = "border-1 border-black m-4 p-2">
+            End-user login details:<br>
+            example@gmail.com<br>
+            !Password1<br>
+            <br>
+            Employee login details:<br>
+            1@hippo.com<br>
+            !Password1<br>
+        </p>
+    </div>
+
 </div>
 
 
