--- a/src/views/userAccountsInfo.hbs
+++ b/src/views/userAccountsInfo.hbs
@@ -13,7 +13,7 @@
             <img src="/images/home-icon.png" alt="Home" class="h-7 w-7" />
         </a>
 
-        <a href = "/employeeDashboard/userAccounts/{{account.user_id}}" class = "flex-1 basis-[5%] max-w-[150px] min-w-[100px] flex justify-center-safe items-center transition duration-200 ease-in-out hover:scale-105">
+        <a href = "/employeeDashboard/userAccounts/{{user_id}}" class = "flex-1 basis-[5%] max-w-[150px] min-w-[100px] flex justify-center-safe items-center transition duration-200 ease-in-out hover:scale-105">
             <p class="m-[6px] text-center text-custom-gold hover:text-white">Return to Accounts</p>
         </a>
     </div>
