--- a/src/views/userDashboard.hbs
+++ b/src/views/userDashboard.hbs
@@ -36,6 +36,7 @@
             </a>
         </div>
     </header>
+    <hr class = "border-1 border-white">
 
     <!-- Main Section -->
     <div class="flex flex-row flex-1 relative">
@@ -154,7 +155,7 @@
         </div>
 
     </div>
-    <hr class="border-1 border-custom-gold">
+    <hr class = "border-1 border-white">
     {{> footer }}
 </div>
 
