--- a/src/views/userAccounts.hbs
+++ b/src/views/userAccounts.hbs
@@ -23,7 +23,7 @@
 <!-- accounts -->
 <div class="h-full grid grid-flow-row-dense grid-cols-2 md:grid-cols-2 gap-4">
     {{#each accounts}}
-        <a href="/employeeDashboard/userAccounts/{{user_id}}/userAccountsInfo/{{account_number}}">
+        <a href="/employeeDashboard/userAccounts/{{../user.id}}/userAccountsInfo/{{account_number}}">
             <div class="cursor-pointer rounded-3xl mt-[25px] max-h-[200px] w-[355px] m-[60px] ml-[200px] mr-[200px]
                 {{#unless is_active}}bg-gray-300{{else}}bg-white{{/unless}}">
                 <div class="flex flex-col items-center justify-center h-full text-logo-navy">
